--- a/small_game_1.html
+++ b/small_game_1.html
@@ -3,9 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <title>Small Game 1</title>
-        <script src="small_game_1.js" type="text/javascript"></script>
+        <link href="css/small_game_1.css" type="text/css" rel="stylesheet">
+        <script src="js/small_game_1.js" type="text/javascript"></script>
     </head>
     <body>
-        <canvas width="900" height="676"></canvas>
+        <aside class="instructions">
+            <h1>Small Game 1</h1>
+            <ul>
+                <li>Arrow keys to move.</li>
+                <li>Avoid the red square.</li>
+                <li>Hit the green circle.</li>
+            </ul>
+        </aside>
     </body>
 </html>
