--- a/small_game_2.html
+++ b/small_game_2.html
@@ -10,10 +10,13 @@
         <aside class="instructions">
             <h1>Small Game 2</h1>
             <ul>
-                <li>Arrow keys to move.</li>
-                <li>Avoid the red square.</li>
-                <li>Hit the green circle.</li>
+                <li>Arrow keys to move</li>
+                <li>Space bar to shoot</li>
+                <li>Avoid the red square</li>
+                <li>Hit the green circle</li>
             </ul>
+            <div id="debug">
+            </div>
         </aside>
     </body>
 </html>
