add visible pointer to player direction

--- a/small_game_2.html
+++ b/small_game_2.html
@@ -12,8 +12,8 @@
             <ul>
                 <li>Arrow keys to move</li>
                 <li>Space bar to shoot</li>
-                <li>Avoid the red square</li>
-                <li>Hit the green circle</li>
+                <li>Shoot the red square</li>
+                <li>Collect the green circle</li>
             </ul>
             <div id="debug">
             </div>
