--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Small Game 2</title>
-        <link href="css/small_game_2.css" type="text/css" rel="stylesheet">
-        <script src="js/small_game_2.js" type="text/javascript"></script>
+        <title>Small Game</title>
+        <link href="css/small_game.css" type="text/css" rel="stylesheet">
+        <script src="js/small_game.js" type="text/javascript"></script>
     </head>
     <body>
         <aside class="instructions">
-            <h1>Small Game 2</h1>
+            <h1>Small Game</h1>
             <ul>
                 <li>Arrow keys to move</li>
                 <li>Space bar to shoot</li>
