clean up pausing, fix bullet expiry issue

--- a/index.html
+++ b/index.html
@@ -2,21 +2,33 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Small Game</title>
+        <title>jshields Canvas Game Demo</title>
         <link href="css/small_game.css" type="text/css" rel="stylesheet">
         <script src="js/small_game.js" type="text/javascript"></script>
     </head>
     <body>
         <aside class="instructions">
-            <h1>Small Game</h1>
+            <h1>Game Instructions</h1>
             <ul>
-                <li>Arrow keys to move</li>
+                <li>WASD or arrow keys to move</li>
                 <li>Space bar to shoot</li>
-                <li>Shoot the red square</li>
-                <li>Collect the green circle</li>
+                <li>The red square
+                    <ul>
+                        <li>Shoot it (coming soon)</li>
+                        <li>Don't touch it</li>
+                    </ul>
+                </li>
+                <li>
+                    The green circle
+                    <ul>
+                        <li>Don't shoot it (coming soon)</li>
+                        <li>Collect it</li>
+                    </ul>
+                </li>
             </ul>
-            <div id="debug">
-            </div>
         </aside>
     </body>
+    <footer class="footer">
+        Source: <a href="https://github.com/jshields/" target="_blank" rel="noopener noreferrer">jshields/</a>
+    </footer>
 </html>
