update src url link

--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
         </aside>
     </body>
     <footer class="footer">
-        Source: <a href="https://github.com/jshields/" target="_blank" rel="noopener noreferrer">jshields/</a>
+        Source: <a href="https://github.com/jshields/canvas_game_demo" target="_blank" rel="noopener noreferrer">jshields/canvas_game_demo</a>
     </footer>
 </html>
