comment out troublesome resets for now

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
                 <li>Space bar to shoot</li>
                 <li>The red square
                     <ul>
-                        <li>Shoot it (coming soon)</li>
+                        <li>Shoot it</li>
                         <li>Don't touch it</li>
                     </ul>
                 </li>
                 <li>
                     The green circle
                     <ul>
-                        <li>Don't shoot it (coming soon)</li>
+                        <li>Don't shoot it</li>
                         <li>Collect it</li>
                     </ul>
                 </li>
