--- a/index.html
+++ b/index.html
@@ -12,18 +12,26 @@
             <ul>
                 <li>WASD or arrow keys to move</li>
                 <li>Space bar to shoot</li>
-                <li>The red square
+                <li>
+                    Get points from these:
                     <ul>
-                        <li>Shoot it</li>
-                        <li>Don't touch it</li>
+                        <li>The red square
+                            <ul>
+                                <li>Shoot it</li>
+                                <li>Don't touch it</li>
+                            </ul>
+                        </li>
+                        <li>
+                            The green circle
+                            <ul>
+                                <li>Don't shoot it</li>
+                                <li>Collect it</li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
                 <li>
-                    The green circle
-                    <ul>
-                        <li>Don't shoot it</li>
-                        <li>Collect it</li>
-                    </ul>
+                    Score some points before the time runs out
                 </li>
             </ul>
         </aside>
