work on layout changes

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
         <script src="js/small_game.js" type="text/javascript"></script>
     </head>
     <body>
+        <header>
+            <h1 class="title">This is a game</h1>
+        </header>
+        <div id="canvas-wrap"></div>
         <aside class="instructions">
-            <h1>Game Instructions</h1>
+            <h2>Game Instructions</h2>
             <ul>
                 <li>WASD or arrow keys to move</li>
                 <li>Space bar to shoot</li>
